<resources>
    <string name="app_name">Achie</string>
    <string name="available_profiles">Available profiles</string>
    <string name="action_settings">Settings</string>
    <string name="profile_name">Profile name</string>
    <string name="create">Create</string>
    <string name="date">Date</string>
    <string name="object">Name of achieve</string>
    <string name="type">Description of achieve</string>
    <string name="count">Count (if there is)</string>
    <string name="add">Add</string>
    <string name="addToPlan">Add Achie to plan</string>
    <string name="addAchie">Add complete Achie</string>
    <string name="title_activity_view_achie">View Achie</string>
    <string name="title_activity_add_achie">Add Achie</string>
    <string name="title_activity_main_menu">Main</string>
    <string name="title_activity_add_prof">Add profile</string>
    <string name="name">Name</string>
    <string name="of">of</string>
    <string name="export">Export</string>
    <string name="title_activity_planning">PlanningActivity</string>
    <string name="load_image">Load image</string>
    <string name="title_activity_view_full_image">View image</string>
    <string name="back_btn">Back</string>
    <string name="delete_achie">Delete Achie</string>
    <string name="title_activity_achie_edit">AchieEditActivity</string>
    <string name="edit">Edit</string>
    <string name="edit_achie">Edit Achie</string>
    <string name="create_new_default_profile_message">Default profile not found! Please, create a new, or just enter name of existing profile to make it default</string>
    <string name="select_profile">Select profile</string>
    <string name="add_profile">Add profile</string>
    <string name="new_profile_message">Create a new profile:</string>
    <string name="warning_message">Warning! This app is free and open source. <a href="https://github.com/IgorKruchinin/AchieApp">Github repository</a>. This app distributing under <a href="https://github.com/IgorKruchinin/AchieApp/blob/master/LICENSE">GNU GPL v2 license</a>. If you are required to pay for the application, these are scammers!</string>
    <string name="make_default">Make this profile as default</string>
    <string name="add_achie_message">Enter the date, name, description and also measure and count of Achie (if it has):</string>
    <string name="title_activity_loqterm">LOQTerm</string>
    <string name="enter">Enter</string>
    <string name="open_terminal">Open LOQ Terminal</string>
    <string name="OK_btn">OK</string>
    <string name="open_terminal_msg">       Warning!\n Using LOQ terminal may damage the application data or break its logic.\n\nUse it only if you know what you are doing!</string>
    <string name="enter_command">Enter command</string>
    <string name="import_profile">Import Profile</string>
    <string name="share">Share</string>
    <string name="achies">Achies</string>
    <string name="plans">Plans</string>
</resources>