<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.ikkui.achie.MainActivity">
    <item
        android:id="@+id/selectProfileItem"
        android:orderInCategory="100"
        android:title="@string/select_profile" />
    <item
        android:id="@+id/addProfileItem"
        android:orderInCategory="101"
        android:title="@string/add_profile" />
    <item
        android:id="@+id/makeDefaultItem"
        android:orderInCategory="102"
        android:title="@string/make_default" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/openTerminal"
        android:orderInCategory="104"
        android:title="@string/open_terminal" />
</menu>