<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/add_achie_message" />

    <EditText
        android:id="@+id/achieDateFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date" />

    <EditText
        android:id="@+id/achieObjectFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/object"
        android:inputType="text|textAutoComplete"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/achieTypeFld"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/type"
        android:inputType="textLongMessage|textMultiLine|textPersonName|textAutoComplete|textImeMultiLine"
        android:lines="2"
        android:maxLines="5"
        android:minLines="2"
        android:textColorHint="#757575" />

    <AutoCompleteTextView
        android:id="@+id/achieMeasureFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/measure"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/achieCountFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/count"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/loadImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="0dp"
        android:text="@string/load_image" />

    <Button
        android:id="@+id/achieAddBtn"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:onClick="add"
        android:text="@string/add" />

</LinearLayout>