<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/content_achie_edit_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/achieDateFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/achieObjectFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/object"
        android:inputType="text"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/achieTypeFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/type"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <AutoCompleteTextView
        android:id="@+id/achieMeasureFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/measure" />

    <EditText
        android:id="@+id/achieCountFld"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/count"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/loadImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="0dp"
        android:onClick="loadImage"
        android:text="@string/load_image" />

    <Button
        android:id="@+id/achieAddBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="add"
        android:text="@string/edit" />

</LinearLayout>